--- a/hw/riscv/Makefile.objs
+++ b/hw/riscv/Makefile.objs
@@ -1,5 +1,6 @@
 obj-y += riscv_board.o
 obj-y += cputimer.o riscv_int.o
+obj-y += fpgadev.o
 obj-y += htif/htif.o
 obj-y += htif/frontend.o
 obj-y += softint.o
